# hw16_realty

./: .travis.yml  CMakeLists.txt  README.md  rclss.cpp  rclst.cpp
include/: classificator.h  clusterizator.h  const.h
